Issue 296: Fix labels word wrap

--- a/themes/KnihovnyCz/less/custom.less
+++ b/themes/KnihovnyCz/less/custom.less
@@ -48,12 +48,6 @@ a {
   text-decoration: none;
 }
 
-form {
-  label {
-    white-space: nowrap;
-  }
-}
-
 .nav > li > a:hover,
 .nav > li > a:focus {
   outline: none;
